[project]
name = "diffusion-exp"
version = "0.1.0"
description = ""
authors = [
    { name = "sasa_leaf" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "torch @ https://download.pytorch.org/whl/cu126/torch-2.9.1%2Bcu126-cp310-cp310-win_amd64.whl",
    "torchvision @ https://download.pytorch.org/whl/cu126/torchvision-0.24.1%2Bcu126-cp310-cp310-win_amd64.whl",
    "torchaudio",
    "tqdm (>=4.67.1,<5.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "gdown (>=5.2.0,<6.0.0)",
    "pathlib (>=1.0.1,<2.0.0)",
]

[tool.poetry]
package-mode = false
[[tool.poetry.source]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "isort (>=7.0.0,<8.0.0)",
    "black (>=26.1.0,<27.0.0)"
]
